--- a/style.css
+++ b/style.css
@@ -6,16 +6,20 @@ h1{
     font-size: 50px;
    
 }
+h2{
+    font-size: 40px;
+}
 .orange{
     color: orange;
 }
-section{
+.flexible-container{
     display: flex;
     margin-bottom: 150px;
 }
 .half{
     width: 100%;
     padding-left: 5% ;
+    
 
 }
 .half img{
@@ -37,4 +41,32 @@ section{
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+.experience{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+.experience-item{
+    box-shadow: 10px 10px 40px gray;
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 20px;
+    border-radius: 10px;
+    border-left: 10px solid;
+}
+#border{
+    border-image: linear-gradient(blue,cyan ) ;
+    border-image-slice: 1;
+    border-left: 7px solid;
+}
+#border2{
+    border-image: linear-gradient(salmon,tomato ) ;
+    border-image-slice: 1;
+    border-left: 7px solid;
+}
+footer p{
+    text-align: center;
+
 }
